# todo-cli

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
data/: todos.json
tests/: test_todo.py
todo_cli/: todo.py
